# Computer-Vision-Class

./: .gitignore  README.md
Project1/: .gitignore  CMakeLists.txt  README.md
Project1/include/: faceDetect.h  filter.h
Project1/src/: da2-example.cpp  da2-video.cpp  filter.cpp  imgDisplay.cpp  timeBlur.cpp  vidDisplay.cpp
Project2/: CMakeLists.txt  README.md
Project2/src/: imgDisplay.cpp  readfiles.cpp
Project3/: CMakeLists.txt
Project3/include/: filter.h
Project3/src/: filter.cpp  vidDisplay.cpp
hw3/: CMakeLists.txt
hw3/src/: raw2tiff.py
